# RhythmGrid

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  df-config.json
assets/: LICENSES.md
docs/: AudioVisualCatalog.md  FlowGpuPort.md  Guidelines.md  OIT-Implementation.md  ProductPlan.md  SceneRearchitect.md  specdb-auto-stale-proposal.md
docs/archive/: CompletedWork.md  DomainPlan.md
spec/: spec.yaml  src-map.json
src/: audio.rs  config.rs  game.rs  grid.rs  input.rs  lib.rs  main.rs  music.rs  pieces.rs  render.rs
src/gui/: animations.rs  app.rs  audio_analysis.rs  audio_output.rs  camera.rs  dashboard.rs  drawing.rs  effect_manager.rs  font.rs  input_bridge.rs  mod.rs  particles.rs  renderer.rs  scene.rs  theme.rs  vanish_zone.rs  world.rs
src/gui/effects/: aurora.rs  (+14 more)
tests/: audio_amplitude.rs  audio_beat_confidence.rs  audio_beat_detect.rs  audio_decode.rs  audio_fft.rs  audio_playback.rs  audio_procedural.rs  audio_rolling_energy.rs  audio_spectral.rs  audio_speed.rs  audio_streaming_decode.rs  audio_streaming_decoder_open_bytes.rs  audio_volume.rs  chunk_game.rs  config_load_save.rs  config_xdg_paths.rs  game_collision.rs  game_combo.rs  game_escalation.rs  game_game_over.rs  game_gravity.rs  game_hold_piece.rs  game_level_score.rs  game_lock_delay.rs  game_lock_delay_recheck.rs  game_movement.rs  game_next_piece.rs  game_state.rs  game_stats.rs  game_t_spin.rs  game_tests.rs  game_tick.rs  grid_core_test.rs  grid_dimensions_cell_state.rs  grid_fundamentals.rs  grid_tests.rs  input_key_map.rs  level_tests.rs  music_jump_to.rs  music_now_playing.rs  (+10 more)
