[package]
name = "rhythm-grid"
version = "0.2.0"
edition = "2024"

[dependencies]
bytemuck = { version = "1", features = ["derive"] }
cpal = "0.15"
pollster = "0.4"
rfd = "0.15"
rustfft = "6"
serde = { version = "1.0.228", features = ["derive"] }
symphonia = { version = "0.5", features = ["mp3", "wav", "flac", "ogg", "vorbis"] }
toml = "1.0.7"
wgpu = "24"
winit = "0.30"

[profile.release]
strip = true
lto = true
opt-level = "s"
